--- a/res/layout/day_of_month.xml
+++ b/res/layout/day_of_month.xml
@@ -15,12 +15,13 @@
 
     <TextView
         android:id="@+id/dayOfCycleTextView"
-        style="@style/DayOfCycleTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:textIsSelectable="false" >
+        android:textIsSelectable="false"
+        android:textSize="12sp"
+        android:textStyle="bold" >
     </TextView>
 
 </RelativeLayout>
