--- a/res/layout/day_of_month.xml
+++ b/res/layout/day_of_month.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" >
     </TextView>
 
@@ -20,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:textIsSelectable="false"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:textStyle="bold" >
     </TextView>
 
