--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -35,7 +35,7 @@
             android:orientation="horizontal" >
 
             <CheckBox
-                android:id="@+id/hadSex"
+                android:id="@+id/hadSexCheckBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
