--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -51,9 +51,10 @@
 
         <Button
             android:id="@+id/clearButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/selector_transparent_button"
             android:text="@string/clear" />
     </LinearLayout>
 
