--- a/res/layout/month_calendar_view.xml
+++ b/res/layout/month_calendar_view.xml
@@ -12,7 +12,8 @@
         <Button
             android:id="@+id/prevMonth"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/prevMonth"
@@ -23,6 +24,7 @@
             android:id="@+id/currentMonth"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="0.6"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/currentMonth"
@@ -33,7 +35,8 @@
         <Button
             android:id="@+id/nextMonth"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/nextMonth"
