--- a/res/layout/month_calendar_view.xml
+++ b/res/layout/month_calendar_view.xml
@@ -45,7 +45,7 @@
     </LinearLayout>
 
     <GridView
-        android:id="@+id/calendar"
+        android:id="@+id/calendarGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="7" >
