--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:orientation="vertical" >
 
         <TextView
@@ -57,6 +59,18 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/note"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <AutoCompleteTextView
+            android:id="@+id/textViewNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </AutoCompleteTextView>
 
         <Button
             android:id="@+id/buttonClear"
