--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -23,6 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:orientation="horizontal" >
 
             <LinearLayout
@@ -75,7 +76,8 @@
         <AutoCompleteTextView
             android:id="@+id/textViewNote"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearance" >
         </AutoCompleteTextView>
 
         <Button
