--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -24,52 +24,57 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="horizontal" >
 
-                <CheckBox
-                    android:id="@+id/hadMenstruationCheckBox"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="@string/menstruation" />
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:text="@string/menstruation"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <Spinner
-                    android:id="@+id/spinnerHadMenstruation"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:text="@string/sex"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="horizontal" >
 
-                <CheckBox
-                    android:id="@+id/hadSexCheckBox"
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/spinnerHadMenstruation"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="@string/sex" />
+                    android:layout_weight="1" />
 
                 <Spinner
                     android:id="@+id/spinnerSex"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:text="@string/note"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
