--- a/res/layout/spinner_item.xml
+++ b/res/layout/spinner_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:gravity="center_vertical"
+        android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false"
         android:textSize="12sp" />
