--- a/res/layout/spinner_selected_item.xml
+++ b/res/layout/spinner_selected_item.xml
@@ -5,10 +5,10 @@
 
     <TextView
         android:id="@+id/spinnerItemTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeight"
+        android:layout_gravity="center"
         android:drawablePadding="5dp"
-        android:gravity="center_vertical|left"
         android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false"
