--- a/res/layout/calendar_item_editor.xml
+++ b/res/layout/calendar_item_editor.xml
@@ -11,14 +11,43 @@
         android:layout_marginRight="5dp"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textViewTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/blue"
-            android:textIsSelectable="false" />
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/prevDay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.2"
+                android:background="@drawable/selector_transparent_button"
+                android:contentDescription="@string/prevDay"
+                android:drawableRight="?attr/prevItemIcon" />
+
+            <TextView
+                android:id="@+id/currentDay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.6"
+                android:contentDescription="@string/currentDay"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/blue"
+                android:textIsSelectable="false" />
+
+            <Button
+                android:id="@+id/nextDay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.2"
+                android:background="@drawable/selector_transparent_button"
+                android:contentDescription="@string/nextDay"
+                android:drawableLeft="?attr/nextItemIcon" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
