--- a/res/layout/month_calendar_view.xml
+++ b/res/layout/month_calendar_view.xml
@@ -17,8 +17,7 @@
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/prevMonth"
-            android:drawableRight="?attr/prevItemIcon" >
-        </Button>
+            android:drawableRight="?attr/prevItemIcon" />
 
         <Button
             android:id="@+id/currentMonth"
@@ -28,9 +27,9 @@
             android:layout_weight="0.6"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/currentMonth"
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/blue" >
-        </Button>
+            android:textColor="@color/blue" />
 
         <Button
             android:id="@+id/nextMonth"
@@ -40,8 +39,7 @@
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/nextMonth"
-            android:drawableLeft="?attr/nextItemIcon" >
-        </Button>
+            android:drawableLeft="?attr/nextItemIcon" />
     </LinearLayout>
 
     <GridView
