--- a/res/layout/view_month.xml
+++ b/res/layout/view_month.xml
@@ -46,7 +46,10 @@
         android:id="@+id/calendarGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="7" >
+        android:horizontalSpacing="1dp"
+        android:numColumns="7"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="1dp" >
     </GridView>
 
 </LinearLayout>
