--- a/res/layout/day_of_month.xml
+++ b/res/layout/day_of_month.xml
@@ -3,8 +3,7 @@
     android:id="@+id/dayOfMonth"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:orientation="vertical"
-    android:padding="2dp" >
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/dayOfMonthTextView"
@@ -21,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:paddingRight="2dp"
         android:textIsSelectable="false"
         android:textSize="12sp"
         android:textStyle="bold" >
