'took pill' option

--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -7,9 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -99,6 +99,13 @@
                     android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/checkBoxTookPill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tookPill"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
             android:layout_width="wrap_content"
