text color in day view

--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -118,7 +118,8 @@
             android:id="@+id/textViewNote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearance" />
+            android:textAppearance="?android:attr/textAppearance"
+            android:textColor="@android:color/black" />
 
         <Button
             android:id="@+id/buttonClear"
