--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minWidth="200dp"
         android:orientation="vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp" >
