--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minWidth="200dp"
+        android:minWidth="240dp"
         android:orientation="vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp" >
@@ -68,7 +68,8 @@
                     android:layout_weight="1"
                     android:paddingLeft="5dp"
                     android:text="@string/menstruation"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="?attr/textViewTextColor" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -77,7 +78,8 @@
                     android:layout_weight="1"
                     android:paddingLeft="5dp"
                     android:text="@string/sex"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="?attr/textViewTextColor" />
             </LinearLayout>
 
             <LinearLayout
@@ -90,14 +92,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="?attr/spinnerItemTextColor" />
 
                 <Spinner
                     android:id="@+id/spinnerSex"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="?attr/spinnerItemTextColor" />
             </LinearLayout>
         </LinearLayout>
 
@@ -113,14 +117,15 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="@string/note"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="?attr/textViewTextColor" />
 
         <AutoCompleteTextView
             android:id="@+id/textViewNote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearance"
-            android:textColor="@android:color/black" />
+            android:textColor="?attr/editableTextViewTextColor" />
 
         <Button
             android:id="@+id/buttonClear"
