--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -14,11 +14,19 @@
     </style>
 
     <style name="DialogBaseTheme" parent="android:Theme.Holo.Dialog">
+
         <!-- item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item -->
+        <item name="spinnerItemTextColor">@android:color/white</item>
+        <item name="textViewTextColor">@android:color/white</item>
+        <item name="editableTextViewTextColor">@android:color/white</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Holo.Light.Dialog">
+
         <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
+        <item name="spinnerItemTextColor">@android:color/black</item>
+        <item name="textViewTextColor">@android:color/black</item>
+        <item name="editableTextViewTextColor">@android:color/black</item>
     </style>
 
 </resources>
