--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -62,12 +62,26 @@
         <item name="unprotected_sex">@drawable/unprotected_sex_light</item>
     </style>
 
+    <declare-styleable name="Theme.Dialog">
+        <attr name="spinnerItemTextColor" format="color|reference" />
+        <attr name="textViewTextColor" format="color|reference" />
+        <attr name="editableTextViewTextColor" format="color|reference" />
+    </declare-styleable>
+
     <style name="DialogBaseTheme" parent="android:Theme.Dialog">
+
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="spinnerItemTextColor">@android:color/black</item>
+        <item name="textViewTextColor">@android:color/white</item>
+        <item name="editableTextViewTextColor">@android:color/black</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
+
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="spinnerItemTextColor">@android:color/black</item>
+        <item name="textViewTextColor">@android:color/white</item>
+        <item name="editableTextViewTextColor">@android:color/black</item>
     </style>
 
     <style name="DialogTheme" parent="DialogBaseTheme">
