--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -15,9 +15,14 @@
     </group>
 
     <item
+        android:id="@+id/clearAllData"
+        android:showAsAction="never"
+        android:title="@string/clearAllData"/>
+    <item
         android:id="@+id/help"
         android:icon="?attr/helpIcon"
         android:showAsAction="never"
-        android:title="@string/help"/>
+        android:title="@string/help"
+        android:visible="false"/>
 
 </menu>
