--- a/res/layout/spinner_item.xml
+++ b/res/layout/spinner_item.xml
@@ -7,9 +7,9 @@
         android:id="@+id/spinnerItemTextView"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/listPreferredItemHeight"
-        android:drawablePadding="5dp"
+        android:drawablePadding="@dimen/view_padding"
         android:gravity="center_vertical|left"
-        android:paddingLeft="5dp"
+        android:paddingLeft="@dimen/view_padding"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?attr/spinnerItemTextColor"
         android:textIsSelectable="false"
