--- a/res/layout/activity_main_one_pane.xml
+++ b/res/layout/activity_main_one_pane.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="a151a5351deb085"
+        ads:adUnitId="@string/adUnitId"
         ads:loadAdOnCreate="true"
         android:gravity="center" />
 
