--- a/res/layout/spinner_selected_item.xml
+++ b/res/layout/spinner_selected_item.xml
@@ -8,8 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:layout_gravity="center"
-        android:drawablePadding="5dp"
-        android:paddingLeft="5dp"
+        android:drawablePadding="@dimen/view_padding"
+        android:paddingLeft="@dimen/view_padding"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?attr/spinnerItemTextColor"
         android:textIsSelectable="false"
