--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -5,12 +5,13 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/dayViewGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="240dp"
         android:orientation="vertical"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp" >
+        android:paddingLeft="@dimen/view_padding"
+        android:paddingRight="@dimen/view_padding" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp"
+                    android:paddingLeft="@dimen/view_padding"
                     android:text="@string/menstruation"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="?attr/textViewTextColor" />
@@ -76,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp"
+                    android:paddingLeft="@dimen/view_padding"
                     android:text="@string/sex"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="?attr/textViewTextColor" />
@@ -115,7 +116,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
+            android:paddingLeft="@dimen/view_padding"
             android:text="@string/note"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="?attr/textViewTextColor" />
@@ -127,13 +128,29 @@
             android:textAppearance="?android:attr/textAppearance"
             android:textColor="?attr/editableTextViewTextColor" />
 
-        <Button
-            android:id="@+id/buttonClear"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/clear"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/view_padding" >
+
+            <Button
+                android:id="@+id/buttonClear"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="@string/clear"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <Button
+                android:id="@+id/buttonClose"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"
+                android:text="@string/close"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
