--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,6 @@
 
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="view_padding">5dp</dimen>
+    <dimen name="height">60dp</dimen>
 
 </resources>
