--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -16,12 +16,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="?android:attr/listPreferredItemHeight"
             android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/prevDay"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height"
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/selector_transparent_button"
@@ -31,7 +32,7 @@
             <Button
                 android:id="@+id/currentDay"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height"
                 android:layout_gravity="center"
                 android:layout_weight="0.6"
                 android:background="@drawable/selector_transparent_button"
@@ -43,7 +44,7 @@
             <Button
                 android:id="@+id/nextDay"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height"
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/selector_transparent_button"
