--- a/res/layout/view_month.xml
+++ b/res/layout/view_month.xml
@@ -12,7 +12,7 @@
         <Button
             android:id="@+id/prevMonth"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height"
             android:layout_gravity="center"
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
@@ -22,7 +22,7 @@
         <Button
             android:id="@+id/currentMonth"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height"
             android:layout_gravity="center"
             android:layout_weight="0.6"
             android:background="@drawable/selector_transparent_button"
@@ -34,7 +34,7 @@
         <Button
             android:id="@+id/nextMonth"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height"
             android:layout_gravity="center"
             android:layout_weight="0.2"
             android:background="@drawable/selector_transparent_button"
