--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <item
+        android:id="@+id/statistic"
+        android:showAsAction="never"
+        android:title="@string/statistic"/>
+
     <group android:checkableBehavior="single" >
         <item
             android:id="@+id/lighttheme"
@@ -18,6 +23,10 @@
         android:id="@+id/clearAllData"
         android:showAsAction="never"
         android:title="@string/clearAllData"/>
+    <item
+        android:id="@+id/rate"
+        android:showAsAction="never"
+        android:title="@string/rate"/>
     <item
         android:id="@+id/help"
         android:icon="?attr/helpIcon"
