--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -15,7 +15,7 @@
         android:gravity="center" />
 
     <TableLayout
-        android:id="@+id/tableLayout1"
+        android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:shrinkColumns="*"
