--- a/res/layout/activity_main_two_panes.xml
+++ b/res/layout/activity_main_two_panes.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             ads:adSize="BANNER"
             ads:adUnitId="@string/adUnitId"
-            ads:loadAdOnCreate="true"
+            ads:loadAdOnCreate="@bool/showAd"
             android:gravity="center"
             android:paddingTop="@dimen/view_padding" />
     </LinearLayout>
