--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/statistic"
+        android:icon="?attr/statisticIcon"
         android:showAsAction="ifRoom"
         android:title="@string/statistic"/>
 
@@ -21,18 +22,22 @@
 
     <item
         android:id="@+id/backupData"
+        android:icon="?attr/backupDataIcon"
         android:showAsAction="never"
         android:title="@string/backupData"/>
     <item
         android:id="@+id/restoreData"
+        android:icon="?attr/restoreDataIcon"
         android:showAsAction="never"
         android:title="@string/restoreData"/>
     <item
         android:id="@+id/clearAllData"
+        android:icon="?attr/clearAllDataIcon"
         android:showAsAction="never"
         android:title="@string/clearAllData"/>
     <item
         android:id="@+id/rate"
+        android:icon="?attr/rateIcon"
         android:showAsAction="never"
         android:title="@string/rate"/>
     <item
