--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -7,7 +7,8 @@
     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/view_padding"
         android:shrinkColumns="*"
         android:stretchColumns="*" >
 
@@ -21,7 +22,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text=""
                 android:textSize="12sp" />
 
@@ -31,7 +34,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text="@string/menstrualCycleLength"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -43,7 +48,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text="@string/bleedingLength"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -61,7 +68,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text="@string/avgValue"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -73,6 +82,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -82,6 +92,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
@@ -97,7 +108,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text="@string/minValue"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -109,6 +122,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -118,6 +132,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
@@ -133,7 +148,9 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
                 android:text="@string/maxValue"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -145,6 +162,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -154,6 +172,45 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:gravity="center"
+                android:text="" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/view_padding" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:gravity="left|center_horizontal"
+                android:paddingLeft="@dimen/view_padding"
+                android:text="@string/firstDayOfCycle"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:gravity="center"
+                android:text="" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
