--- a/res/layout/statistic_row.xml
+++ b/res/layout/statistic_row.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="@string/avgValue"
         android:textSize="12sp"
@@ -22,6 +23,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="" />
 
@@ -31,6 +33,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="" />
 
