--- a/res/layout/view_month.xml
+++ b/res/layout/view_month.xml
@@ -27,6 +27,7 @@
             android:layout_weight="0.6"
             android:background="@drawable/selector_transparent_button"
             android:contentDescription="@string/currentMonth"
+            android:drawableLeft="?attr/goToTodayIcon"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/blue" />
