--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -5,6 +5,7 @@
 
         <!-- item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item -->
         <item name="helpIcon">@drawable/ic_menu_help_dark</item>
+        <item name="settingsIcon">@drawable/ic_settings_dark</item>
         <item name="rateIcon">@drawable/ic_menu_rate_dark</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_dark</item>
         <item name="clearAllDataIcon">@drawable/ic_menu_discard_dark</item>
@@ -19,6 +20,7 @@
 
         <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
         <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
@@ -37,6 +39,7 @@
         <item name="editableTextViewTextColor">@android:color/white</item>
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Holo.Light.Dialog">
@@ -47,6 +50,7 @@
         <item name="editableTextViewTextColor">@android:color/black</item>
         <item name="nextItemIcon">@drawable/ic_next_item_light</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_light</item>
     </style>
 
 </resources>
