--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="Theme">
         <attr name="helpIcon" format="reference" />
+        <attr name="settingsIcon" format="reference" />
         <attr name="rateIcon" format="reference" />
         <attr name="statisticIcon" format="reference" />
         <attr name="clearAllDataIcon" format="reference" />
@@ -10,6 +11,7 @@
         <attr name="exportIcon" format="reference" />
         <attr name="nextItemIcon" format="reference" />
         <attr name="prevItemIcon" format="reference" />
+        <attr name="goToTodayIcon" format="reference" />
         <attr name="note_bg" format="reference" />
         <attr name="one_drop_bg" format="reference" />
         <attr name="two_drops_bg" format="reference" />
@@ -30,6 +32,7 @@
 
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
         <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
@@ -44,6 +47,7 @@
 
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
         <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
@@ -57,6 +61,7 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
         <item name="note_bg">@drawable/note_bg_src_dark</item>
         <item name="one_drop_bg">@drawable/one_drop_bg_src_dark</item>
         <item name="two_drops_bg">@drawable/two_drops_bg_src_dark</item>
@@ -73,6 +78,7 @@
     <style name="AppThemeLight" parent="AppBaseThemeLight">
         <item name="nextItemIcon">@drawable/ic_next_item_light</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_light</item>
         <item name="note_bg">@drawable/note_bg_src_light</item>
         <item name="one_drop_bg">@drawable/one_drop_bg_src_light</item>
         <item name="two_drops_bg">@drawable/two_drops_bg_src_light</item>
@@ -94,6 +100,7 @@
         <item name="editableTextViewTextColor">@android:color/black</item>
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
@@ -104,6 +111,7 @@
         <item name="editableTextViewTextColor">@android:color/black</item>
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
+        <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
     </style>
 
     <style name="DialogTheme" parent="DialogBaseTheme">
